--- a/src/components/main/Section5/Section5.module.css
+++ b/src/components/main/Section5/Section5.module.css
@@ -38,6 +38,15 @@
   border-radius: 8px;
   margin-bottom: 30px;
 }
+.student_btn2 {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  padding: 5px 8px;
+  background-color: rgb(65, 71, 77);
+  border: none;
+  border-radius: 8px;
+  margin-bottom: 30px;
+}
 .student_img {
   height: 450px;
   width: 450px;
